--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,9 @@ footer {
   max-height: 200px;
 }
 
-.skills-block {
+.skills-block,
+.profile,
+.code-examples {
   display: flex;
   justify-content: center;
   width: 60%;
@@ -78,6 +80,10 @@ footer {
   background-color: #3322;
   box-shadow: 10px 5px 5px #3322;
   flex-wrap: wrap;
+}
+
+.profile {
+  margin-top: 20px;
 }
 
 .experience-block {
@@ -103,17 +109,14 @@ footer {
 }
 
 #tabs .whiteborder {
-  border: 1px solid #707070;
-  box-shadow: 5px 5px 5px #3322;
-  border-bottom: 1px solid #3355f0e8;
+  border: 1px solid #3322;
   border-radius: 3px 3px 0 0;
 }
 
 #tabs .tabContent {
   width: 100%;
   height: 50%;
-  border: 1px solid #707070;
-  box-shadow: 5px 5px 5px #3322;
+  border: 1px solid #3322;
   position: relative;
   top: -1px;
   z-index: 1;
